[gd_scene load_steps=2 format=3 uid="uid://ewj3unw7y8i3"]

[ext_resource type="Script" uid="uid://fsm6nypkx56w" path="res://scripts/ending_screen.gd" id="1_jkc7j"]

[node name="EndingScreen" type="CanvasLayer"]
script = ExtResource("1_jkc7j")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.226707, 0.226707, 0.226707, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
alignment = 1

[node name="GameOverLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "GAME OVER"

[node name="ReasonLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="RestartButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Restart Game"
